--- a/src/css/style.less
+++ b/src/css/style.less
@@ -47,6 +47,9 @@ body {
         color: #FFE0A2;
         text-shadow: @my-text-shadow;
     }
+    .btn-default.active {
+        background: #F3BF62;
+    }
 }
 
 header {
@@ -261,6 +264,10 @@ section {
     .fruit {
         background: red;
         border-radius: 100%;
+    }
+    .frog {
+        background: url('../images/frog.png');
+        background-size: cover;
     }
 }
 
