--- a/src/css/style.less
+++ b/src/css/style.less
@@ -268,6 +268,8 @@ section {
     .frog {
         background: url('../images/frog.png');
         background-size: cover;
+        opacity: 0.8;
+        .direction;
     }
 }
 
@@ -299,6 +301,9 @@ section {
 }
 
 @media screen and (max-width: 768px) {
+    .board {
+        max-width: 400px;
+    }
     header {
         .game_buttons {
             padding-right: 0;
