Fix snake size option values and start game on direction pad press

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,6 +64,10 @@ header .game_buttons button#options {
   background: #5B9B5B;
   font-size: 150%;
 }
+header .game_buttons button#options:hover {
+  background-color: #398239;
+  border-color: #398439;
+}
 section {
   padding: 0 20px;
 }
