--- a/src/css/style.less
+++ b/src/css/style.less
@@ -82,6 +82,10 @@ header {
             &#options {
                 background: #5B9B5B;
                 font-size: 150%;
+                &:hover {
+                    background-color: #398239;
+                    border-color: #398439;
+                }
             }
         }
     }
