--- a/src/css/style.less
+++ b/src/css/style.less
@@ -258,6 +258,10 @@ section {
             background: url('../images/snake-graphics_head.png');
             .direction;
         }
+        &.snake-head-2 {
+            background: url('../images/head-2.png');
+            .direction;
+        }
         &.alternate-head {
             background: url('../images/snake-graphics-turning-head.png');
             &.flip {
