Set snake css to no-repeat

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -182,6 +182,7 @@ section {
 .board .snake {
   background: orange;
   background-size: cover!important;
+  background-repeat: no-repeat !important;
 }
 .board .snake.snake-body-1 {
   background: url('../images/snake-graphics_head-2.png');
