--- a/src/css/style.less
+++ b/src/css/style.less
@@ -208,6 +208,7 @@ section {
         background: orange;
         //border-radius: 100%;
         background-size: cover!important;
+        background-repeat: no-repeat!important;
         
         &.snake-body-1 {
             background: url('../images/snake-graphics_head-2.png');
