Set up hacky Backand REST API w/AngularJS

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -29,6 +29,13 @@ body {
     border-right: 10px solid rgba(0, 128, 0, 0.2);
 }
 
+#leaderboard {
+    color: white;
+    form {
+        color: black;
+    }
+}
+
 .modal-content {
     background: repeating-linear-gradient(
       45deg,
