--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,12 @@ body {
   border-left: 10px solid rgba(0, 128, 0, 0.2);
   border-right: 10px solid rgba(0, 128, 0, 0.2);
 }
+#leaderboard {
+  color: white;
+}
+#leaderboard form {
+  color: black;
+}
 .modal-content {
   background: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 10px, rgba(0, 0, 0, 0.3) 10px, rgba(0, 0, 0, 0.3) 20px), url(http://s3-us-west-2.amazonaws.com/s.cdpn.io/3/old_map_@2X.png);
   font-family: 'Seymour One', sans-serif;
