--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,11 +14,30 @@ body {
   border-left: 10px solid rgba(0, 128, 0, 0.2);
   border-right: 10px solid rgba(0, 128, 0, 0.2);
 }
-#leaderboard {
+#highscoreModal {
   color: white;
+  text-align: center;
+  background: rgba(255, 0, 0, 0.38);
 }
-#leaderboard form {
+#highscoreModal form {
   color: black;
+}
+#highscoreModal ol {
+  max-height: 200px;
+  overflow-y: scroll;
+  width: 200px;
+  margin: auto;
+  opacity: .8;
+}
+#highscoreModal ol li:first-child {
+  opacity: 1;
+  color: #9F0000;
+}
+#highscoreModal .btn {
+  margin: 1rem auto;
+}
+#highscoreModal .closebtn {
+  display: none;
 }
 .modal-content {
   background: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 10px, rgba(0, 0, 0, 0.3) 10px, rgba(0, 0, 0, 0.3) 20px), url(http://s3-us-west-2.amazonaws.com/s.cdpn.io/3/old_map_@2X.png);
