--- a/src/css/style.less
+++ b/src/css/style.less
@@ -28,6 +28,21 @@ body {
     border-left: 10px solid rgba(0, 128, 0, 0.2);
     border-right: 10px solid rgba(0, 128, 0, 0.2);
 }
+footer {
+    text-align: center;
+    color: red;
+    font-size: 1.2rem;
+    opacity: .5;
+
+    a {
+        color: red;
+
+        &:hover {
+            color: white;
+            text-decoration: none;
+        }
+    }
+}
 
 #highscoreModal {
     color: white;
