--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,19 @@ body {
   border-left: 10px solid rgba(0, 128, 0, 0.2);
   border-right: 10px solid rgba(0, 128, 0, 0.2);
 }
+footer {
+  text-align: center;
+  color: red;
+  font-size: 1.2rem;
+  opacity: .5;
+}
+footer a {
+  color: red;
+}
+footer a:hover {
+  color: white;
+  text-decoration: none;
+}
 #highscoreModal {
   color: white;
   text-align: center;
